--- a/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__all_asset_metadata_coingecko2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_gecko2/silver__all_asset_metadata_coingecko2.yml
@@ -5,6 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - ID
+            - SYMBOL
             - _INSERTED_TIMESTAMP
     columns:
       - name: ID
