--- a/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__token_asset_metadata_coinmarketcap2.yml
+++ b/models/silver/asset_metadata/_asset_metadata2/coin_market_cap2/silver__token_asset_metadata_coinmarketcap2.yml
@@ -4,8 +4,8 @@ models:
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - TOKEN_ADDRESS
-            - PLATFORM_ID
+            - LOWER(TOKEN_ADDRESS)
+            - LOWER(PLATFORM_ID)
     columns:
       - name: ID
         tests:
