--- a/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_asset_metadata_temp.yml
@@ -6,7 +6,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - TOKEN_ADDRESS
-            - BLOCKCHAIN_ID
+            - BLOCKCHAIN
 
     columns:
       - name: ID
