--- a/models/gold/price_temp/price_temp__ez_hourly_token_prices_temp.yml
+++ b/models/gold/price_temp/price_temp__ez_hourly_token_prices_temp.yml
@@ -7,7 +7,7 @@ models:
           combination_of_columns:
             - HOUR
             - TOKEN_ADDRESS
-            - BLOCKCHAIN_ID
+            - BLOCKCHAIN
 
     columns:
       - name: HOUR
@@ -20,8 +20,6 @@ models:
         description: The number of decimals for token contract
       - name: BLOCKCHAIN
         description: The Blockchain, Network, or Platform where this asset has a token address. This column is derived by manually grouping blockchain_name, for reference purposes.
-      - name: BLOCKCHAIN_NAME
-        description: The name of the Blockchain, Network, or Platform where this asset has a token address. This may differ by provider.
       - name: BLOCKCHAIN_ID
         description: The unique identifier of the Blockchain, Network, or Platform where this asset has a token address.
       - name: PRICE
