--- a/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
+++ b/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
@@ -5,7 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - HOUR
-            - TOKEN_ADDRESS
+            - LOWER(TOKEN_ADDRESS)
             - BLOCKCHAIN
 
     columns:
