--- a/models/silver/hourly_prices/_prices2/coin_market_cap2/silver__token_prices_coinmarketcap2.yml
+++ b/models/silver/hourly_prices/_prices2/coin_market_cap2/silver__token_prices_coinmarketcap2.yml
@@ -5,7 +5,7 @@ models:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
             - RECORDED_HOUR
-            - TOKEN_ADDRESS
+            - LOWER(TOKEN_ADDRESS)
             - PLATFORM_ID
 
     columns:
