--- a/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
+++ b/models/silver/hourly_prices/_prices2/all_providers2/silver__token_prices_priority2.yml
@@ -14,7 +14,7 @@ models:
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
-          - hour_sequence_gaps:
+          - priority_hour_sequence_gaps:
               partition_by:
                 - TOKEN_ADDRESS
                 - BLOCKCHAIN
