--- a/models/silver/prices/coin_gecko/silver__token_asset_metadata_coingecko.yml
+++ b/models/silver/prices/coin_gecko/silver__token_asset_metadata_coingecko.yml
@@ -1,17 +1,22 @@
 version: 2
 models:
-  - name: bronze__all_asset_metadata_coinmarketcap2
+  - name: silver__token_asset_metadata_coingecko
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
-            - ID
-            - TOKEN_ADDRESS
-            - NAME
-            - SYMBOL
-            - PLATFORM
+            - LOWER(TOKEN_ADDRESS)
             - PLATFORM_ID
     columns:
       - name: ID
+        tests:
+          - not_null
+      - name: TOKEN_ADDRESS
+        tests:
+          - not_null
+      - name: PLATFORM
+        tests:
+          - not_null
+      - name: PLATFORM_ID
         tests:
           - not_null
       - name: _INSERTED_TIMESTAMP
