--- a/models/sources.yml
+++ b/models/sources.yml
@@ -689,6 +689,12 @@ sources:
     tables: 
       - name: blocks_completeness
       - name: transactions_completeness
+  - name: m1_observ
+    database: m1
+    schema: silver_observability
+    tables: 
+      - name: blocks_completeness
+      - name: transactions_completeness
   - name: ethereum_stats
     database: ethereum
     schema: stats
